--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-<!-- <queries>
+<queries>
   <!-- If your app checks for SMS support -->
   <intent>
     <action android:name="android.intent.action.VIEW" />
@@ -11,7 +11,7 @@
     <action android:name="android.intent.action.VIEW" />
     <data android:scheme="tel" />
   </intent>
-</queries> -->
+</queries>
 
 
     <application
